admin-service-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin-service-ingress-secure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Path(`/adminPHIS/{[0aA-9zZ]+}/{[0aA-9zZ]+}/{[0aA-9zZ]+}`)
    kind: Rule
    services:
    - name: admin-service-mysql
      port: 80
  tls:
    secretName: fedgen-ml-tls
